[package]
name = "weber"
version = "0.1.0"
authors = ["Rheydskey <matgag02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
panic = 'abort'
debug = 0
lto = true
opt-level = 'z'

[dependencies]
tokio = {version = "1.2.0",  features = ["full"]}
reqwest = {version = "0.11.1"}